<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mainPackage.view.OfficeHoursListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/image_button_2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@null"
            android:scaleType="centerInside"
            android:src="@drawable/back_arrow"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:text="@string/office_hours_list"
            android:textSize="30sp"
            android:layout_weight="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="16dp" />

        <ImageButton
            android:id="@+id/img_button_forward"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="top|end"
            android:background="@null"
            android:scaleType="centerInside"
            android:src="@drawable/pan_list"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>


    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="409dp"
        android:layout_height="500dp"
        android:layout_marginBottom="116dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp">

        <LinearLayout
            android:id="@+id/my_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>

    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/scrollView3"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/addOfficeHoursButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_office_hours" />

        <Button
            android:id="@+id/removeOfficeHoursButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_office_hours"
            android:layout_marginStart="20dp" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>